# ssrc

./: AGENTS.md  CLAUDE.md  README.md
UPLIFT-v1/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
UPLIFT-v1/.devcontainer/: devcontainer.json
UPLIFT-v1/configs/: cifar_minimal.yaml  corrupt_counts.yaml  fed_toy.yaml
UPLIFT-v1/docs/: docker.md
UPLIFT-v1/experiments/: cifar_validate.py  corrupt_counts.py  fed_toy.py
UPLIFT-v1/results/: README.md  counts_sweep.csv
UPLIFT-v1/scripts/: plot_cifar10_results.py  plot_counts_sweep.py  run_counts_sweep.py
UPLIFT-v1/src/uplift/: __init__.py
UPLIFT-v1/tests/: test_counts_corruption.py  test_logit_adjustment.py
fedcore/: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  Makefile  REFACTOR_PLAN.md  REPRODUCE.md  pyproject.toml
fedcore/experiments/fedcore/: LEMMA_L_proof.md  README.md  aggregate.py  aggregate_T8.py  aggregate_covtype.py  aggregate_selftrain.py  atomic_io.py  certificates.py  certify.py  clients.py  config.py  (+44 more)
fedcore/fedcore/: atomic_io.py  config.py  grouping.py  selector.py
fedcore/reports/: REPORT_2026-06-28_priorities.md  REPORT_T8_fedosr_bases.md  REPORT_selftrain_lowlabel.md  REPORT_selftrain_pkg.md
fedcore/scripts/: docker_cifar.sh  docker_fedpd.sh  docker_foogd.sh  docker_foogd_full.sh  docker_selftrain.sh  docker_selftrain_fedpd.sh  docker_selftrain_pkg.sh  docker_smoke.sh  docker_test.sh  run_fedpd_all.sh  run_foogd_all.sh  run_ladder.sh  run_selftrain_fedpd_seeds.sh  run_selftrain_lowlabel_seeds.sh
fedcore/tests/: README.md  golden_capture.py  golden_check.py
(+175 files in other folders)
