[project]
name = "uplift-u"
version = "0.1.0"
description = "Minimal research scaffold for prior decontamination experiments."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
